+ Renamed method LoadFromFile to DeserializeFromFile
+ Set (0,0) coordinate by default for all custom objects newly added to GraphArea
+ Fixed edges after storage state loading
+ Fixed LinLog, KK, ISOM, FR algorithms display when there is only one vertex
+ Fixed overlap removal algorithm loading with incorrect parameters
+ Fixed edge labels positioning

PCL-IMPROVEMENTS
- Added YAXLib v2.13 project sources splitted into 2 different projects: main and PCL compliant (for attributes to be availbale in PCL libraries)
- Implemented PCL version of GraphX.Common
- Implemented PCL version of GraphX.Logic
- Implemented GraphX.WPF.Controls platform-specific library


RELEASE 2.0.2
+ Added vertex control labels with following functionality:
	+ 2 available positioning modes: by sides or by coordinates
	+ Always attached to vertex and moves with it
	+ Rotation angle support
	+ Same template logic as in EdgeLabelControl
+ Added key modifiers to vertex event args
+ Added XAML templates usage example in WF project
+ Added new layout type Custom. When set layout algorithm calculation is skipped completely and manually added data is used for OR and ER algorithms (if any).
+ Added (reintroduced) GraphArea::SideExpansionSize property which gets or sets additional space for GraphArea borders. Useful for zoom adjustments when custom text or controls which are not used in size calculations must fit into the zooming.
+ Added IGraphControlFactory-Interface and Implementation for Edge and Vertex controls creation (thanks to Paul Mandalka)
+ Added simple Nuget-Package specification for GraphX (use createPackage.bat to create the nuget package for GraphX) (thanks to Paul Mandalka)
+ Added new ZoomControl::ZoomAnimationCompleted event (thanks to Paul Mandalka)
+ Fixed hidden edges update on vertex drag
+ Fixed PrintHelper::ExportToImage method to use DPI-Settings for Image Rendering (thanks to Paul Mandalka)