@@ -59,7 +59,11 @@
                 </StackPanel>
             </ToolTip>
         </Style.Resources>
-        <Setter Property="ToolTip" Value="{StaticResource ToolTipContent}"/>
+        <Setter Property="ToolTip">
+            <Setter.Value>
+                <TextBlock Text="{Binding Text, UpdateSourceTrigger=PropertyChanged}"></TextBlock>
+            </Setter.Value>
+        </Setter>
 
         <Setter Property="Template">
             <Setter.Value>
@@ -72,7 +76,7 @@
                         <Path Stroke="{TemplateBinding Foreground}"
                           StrokeThickness="2" MinWidth="1" MinHeight="1" 
                             x:Name="PART_edgeArrowPath"/>
-                        <gxl:EdgeLabelControl x:Name="PART_edgeLabel" Content="{Binding Edge.Text, RelativeSource={RelativeSource TemplatedParent}}" />
+                        <gxl:EdgeLabelControl x:Name="PART_edgeLabel" Content="{Binding Edge.Text, RelativeSource={RelativeSource TemplatedParent}, UpdateSourceTrigger=PropertyChanged}" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
