@@ -24,6 +24,7 @@
 + Fixed LinLog, KK, ISOM, FR algorithms display when there is only one vertex
 + Fixed overlap removal algorithm loading with incorrect parameters
 + Fixed edge labels positioning
++ Fixed EdgeControl data context bug after graph deserialization
 
 PCL-IMPROVEMENTS
 - Added YAXLib v2.13 project sources splitted into 2 different projects: main and PCL compliant (for attributes to be availbale in PCL libraries)
